@@ -152,11 +152,10 @@ bool parse_c_file(char *filename, scandata *sdata, htable *phtgen) {
 */
 
 bool output_file(char *ofile, htable *pht) {
-	FILE	 *fp;
-	char	**keys,
-		 *value;
-	int	  i,
-		  n;
+	FILE	*fp;
+	char	*value;
+	int	 i;
+	hkeys	*phk;
 
 	fp = fopen(ofile, "w");
 	if (fp == NULL) {
@@ -164,19 +163,18 @@ bool output_file(char *ofile, htable *pht) {
 		return(false);
 	}
 
-	n = hash_nbkey(pht);
-	keys = hash_keys(pht);
+	phk = hash_keys(pht);
 
 	fprintf(fp, "# pmkfile generated by pmkscan\n\n");
 
-	for(i = 0 ; i < n ; i++) {
-		value = (char *)hash_get(pht, keys[i]);
+	for(i = 0 ; i < phk->nkey ; i++) {
+		value = (char *)hash_get(pht, phk->keys[i]);
 
 		fprintf(fp, "%s\n\n", value);
 	}
 
 	fclose(fp);
-	free(keys);
+	hash_free_hkeys(phk);
 
 	return(true);
 }
