@@ -1,3 +1,7 @@
+22 Jul 2003 mipsator
+ * rewritten hash_keys() to return a new structure (hkeys).
+ * fix use of hash_keys() in sources.
+
 21 Jul 2003 mipsator
  * added output_file() and misc in pmkscan.
  * improved hash functions to work with (void*) instead of (char*).
